[package]

name = "geohash-16"
version = "0.1.0"
authors = [ "ludeed <lfssilva@aua.pt>" ]
description = "Geohash-16 implementation for Rust."
license = "MIT"
keywords = ["geohash", "gis", "geography", "base16"]
repository = "https://github.com/LudeeD/geohash-16"
readme = "README.md"
edition = "2018"

[dependencies]
geo-types = "0.4.2"
failure = "0.1.2"

[dev-dependencies]
num-traits = "0.2"
